--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ test:
 
 about:
   home: https://github.com/eliben/pycparser
-  license: BSD-3-clause
+  license: BSD-3-Clause
   license_file: LICENSE
   summary: Complete C99 parser in pure Python
   description: |
