--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,13 @@
 {% set name = "pycparser" %}
 {% set version = "2.22" %}
-{% set sha256 = "491c8be9c040f5390f5bf44a5b07752bd07f56edf992381b05c701439eec10f6" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 491c8be9c040f5390f5bf44a5b07752bd07f56edf992381b05c701439eec10f6
 
 build:
   noarch: python
@@ -19,14 +17,18 @@ build:
 requirements:
   host:
     - pip
-    - python =2.7|>=3.4
+    - python >=3.8
   run:
-    - python =2.7|>=3.4
+    - python >=3.8
 
 test:
   imports:
     - pycparser
     - pycparser.ply
+  requires:
+    - pip
+  commands:
+    - pip check
 
 about:
   home: https://github.com/eliben/pycparser
